<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">App e-commerce TIC [BETA]</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Options</string>

    <!-- MainActivity : Ecran principal -->

    <string name="textButtonCompte">Mon compte</string>
    <string name="textButtonPanier">Mon panier</string>
    <string name="textButtonConnexion">Se connecter</string>
    <string name="textButtonEnregistrer">S\'enregister</string>
    <string name="textButtonAjouterAuPanier">Ajouter</string>
    <string name="textSeDeconnecter">Se déconnecter</string>
    <string name="textTextEditRecherche">Tapez votre recherche</string>
    <string name="textButtonValiderRecherche">OK</string>
    <string name="textAPropos">A propos</string>
    <string name="textEditLoginUser">Nom d\'utilisateur</string>
    <string name="textEditPassUser">Mot de passe</string>
    <string name="textButtonValiderLogin">Connexion</string>
    
    <string name="title_fragment_account">Mon compte</string>
    <string name="title_fragment_cart">Mon Panier</string>
    <string name="title_fragment_about">À propos</string>
    <string name="title_fragment_login">Connexion</string>
    <string name="title_fragment_register">Créer un compte</string>
    <string name="title_fragment_product">Détails du produit</string>
    <string name="title_fragment_product_list">Liste des produits</string>
    <string name="title_fragment_category">Catégories</string>
    <string name="title_fragment_home">Accueil</string>
    <string name="title_fragment_order">Mes commandes</string>
    <string name="title_productList_sale">Nos promotions</string>
    <string name="title_productList_specialOffer">Nos offres spéciales</string>
    <string name="title_productList_news">Nos nouveautés</string>
    <string name="title_productList_DoNotMiss">À ne pas manquer</string>
    
    
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

<!--     Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Accueil</item>
        <item>Catégories</item>
        <item>Créer un compte</item>
        <item>Connexion</item>
        <item>Mon Panier</item>
        <item>Déconnexion</item>
        <item>Mon compte</item>
        <item>À propos</item>
        <item>Mes commandes</item>
    </string-array>

<!--     Nav Drawer List Item Icons -->
<!--     Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_category</item>
        <item>@drawable/ic_create_account</item>
        <item>@drawable/ic_login</item>
        <item>@drawable/ic_empty_cart</item>
        <item>@drawable/ic_logout</item>
        <item>@drawable/ic_account</item>
        <item>@drawable/ic_about</item>
        <item>@drawable/ic_order</item>
    </array>

<!--     Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

</resources>