<!-- <ScrollView -->
<!--     android:layout_width="match_parent" -->
<!--     android:layout_height="match_parent" > -->
    
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ticfrontend.activity.MainActivity" >
   
    <LinearLayout 
        android:id="@+id/layoutBoutonMain"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
		android:layout_marginLeft="5dp" 
      	android:layout_marginRight="5dp"
      	android:visibility="gone"
        >
        
        <Button 
            android:id="@+id/boutonCompte"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="left"            
            android:text="@string/textButtonCompte"
            android:textSize="18dp"
            />

        <Button
            android:id="@+id/boutonPanier"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:text="@string/textButtonPanier"
            android:textSize="18dp" 
            />
        
	</LinearLayout>
	
    <LinearLayout 
        android:id="@+id/layoutBoutonConnexion"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
		android:layout_marginLeft="5dp" 
      	android:layout_marginRight="5dp"
      	android:visibility="visible"
        >
        
        <Button 
            android:id="@+id/boutonConnexion"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="left"            
            android:text="@string/textButtonConnexion"
            android:textSize="18dp"
            />

        <Button
            android:id="@+id/boutonEnregistrer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:text="@string/textButtonEnregistrer"
            android:textSize="18dp" 
            />
        
	</LinearLayout>
	
    <LinearLayout 
        android:id="@+id/layoutEditTextMain"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp" 
      	android:layout_marginRight="5dp"
      	android:focusable="true" 
      	android:focusableInTouchMode="true"
        >
    
	    <EditText 
			android:id="@+id/editTextRecherche"
			android:layout_width="0dp"
			android:layout_height="wrap_content" 
			android:hint="@string/textTextEditRecherche"
			android:textSize="14dp"
			android:inputType="textAutoComplete"
			android:layout_weight="1"
			
			/>
	
	    <Button
	        android:id="@+id/boutonValiderRecherche"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/textButtonValiderRecherche"
	        android:textSize="14dp" 
	        />
    
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/layoutSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="30dp"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp" 
      	android:visibility="gone"
        >
	    
        <TextView 
            android:id="@+id/sortText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="16dp"
	        android:textStyle="normal"
	        android:text="Trier par : "
	        />
	    
	</LinearLayout>
    
<!--     <ProgressBar -->
<!-- 		android:id="@+id/progressBar1" -->
<!--         style="?android:attr/progressBarStyleHorizontal" -->
<!--         android:layout_width="match_parent" -->
<!--         android:layout_height="wrap_content"  -->
<!--         android:layout_marginTop="10dp"         -->
<!-- 		/> -->
    
    
    <TextView 
        android:id="@+id/textListCategorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="Liste des catégories"
        android:visibility="visible"
        />
    
     <TextView 
        android:id="@+id/textSearchResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="Résultat de votre recherche"
        android:visibility="gone"
        />
<!--         android:layout_marginTop="10dp"         -->
    
    <ProgressBar
		android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
	    
	<ListView 
		android:id="@+id/listviewCat"
	    android:layout_width="match_parent"
		android:layout_height="wrap_content"
	    >  
	</ListView> 

</LinearLayout>

<!-- 	<LinearLayout  -->
<!--     	android:id="@+id/layoutListCategorie" -->
<!--         android:layout_width="match_parent" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:orientation="vertical" -->
<!--         android:layout_marginLeft="5dp"  -->
<!--     	> -->
<!-- 	</LinearLayout> -->

<!--     </ScrollView> -->
